syntax = "proto2";
package org.roylance.yaorm;

message WorkerConfiguration {
    optional string id = 1;
    optional string ip = 2;
    optional string port = 3;
    optional string host = 4;
    optional uint64 initialized_time = 5;
    optional WorkerState state = 6;
}

enum WorkerState {
    WORKING = 0;
    IDLE = 1;
}

enum WorkerToManagerMessageType {
    REGISTRATION = 0;
}

enum ManagerToManagerMessageType {
    ENSURE_WORKERS_WORKING = 0;
}

enum ActorRole {
    MANAGER = 0;
    WORKER = 1;
}

message Log {
    optional string id = 1;
    optional string message = 2;
}

message Dag {
    optional string id = 1;
    optional string display = 2;
    repeated Task flattened_tasks = 3;
    optional int64 execution_date = 4;
    optional int64 start_date = 5;
    optional int64 end_date = 6;
    optional int64 duration = 7;
    repeated Task uncompleted_tasks = 8;
    repeated Task processing_tasks = 9;
    repeated Task errored_tasks = 10;
    repeated Task completed_tasks = 11;
    optional string new_field_1 = 12;
    optional string new_field_2 = 13;
}

message Task {
    optional string id = 1;
    optional string display = 2;
    repeated TaskDependency dependencies = 3;
    optional string dag_id = 4;
    repeated Log logs = 5;
    optional int64 execution_date = 6;
    optional int64 start_date = 7;
    optional int64 end_date = 8;
    optional int64 duration = 9;
    optional string first_context_base_64 = 10;
    optional string second_context_base_64 = 11;
    optional string third_context_base_64 = 12;
}

message TaskDependency {
    optional string id = 1;
    optional string parent_task_id = 2;
}

message AddTaskToDag {
    optional string id = 1;
    optional Task parent_task = 2;
    optional Task new_task = 3;
    optional string first_context_base_64 = 4;
    optional string second_context_base_64 = 5;
    optional string third_context_base_64 = 6;
}

message CompleteTask {
    optional string id = 1;
    optional Task task = 2;
    optional WorkerConfiguration worker_configuration = 3;
    repeated string logs = 4;
    optional bool is_error = 5;
}